Added erase button to reset board

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     </head>
     <body>
         <div id="container"></div>
+        
+        
+        <div class="erase-div">
+            <button id="erase">erase</button>
+        </div>
     </body>
     <script src="drawing.js"></script>
 </html>
