added change sizes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <body>
         <div id="container"></div>
         
+        <div class="size">
+            <button class="small-grid">small</button>
+            <button class="med-grid">medium</button>
+            <button class="lrg-grid">large</button>
+        </div>
         
         <div class="erase-div">
             <button id="erase">erase</button>
